Imported Hana's room models

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,12 +160,11 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
-OpenAssetsAtExit=/Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment:PersistentLevel.GameEnvironment
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Cube.Cube
+OpenAssetsAtExit=/Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment:PersistentLevel.GameEnvironment
+OpenAssetsAtExit=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001.ConveyorEnd_ConeyorEndScan_001
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 
 [RootWindow]
@@ -1040,25 +1039,25 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem1=/Game/PuzzleBP/Blueprints/Cube
-MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem3=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem4=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem8=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem9=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem10=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem11=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem12=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem14=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
-MRUItem15=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem16=/Game/Geometry/Meshes/CubeMaterial
-MRUItem17=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
-MRUItem18=/Game/PuzzleBP/Maps/GameEnvironment
-MRUItem19=/Game/PuzzleBP/Maps/PuzzleExampleMap
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem3=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem4=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem5=/Game/PuzzleBP/Blueprints/Cube
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem9=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem10=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem11=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem12=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem13=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem15=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
+MRUItem16=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem17=/Game/Geometry/Meshes/CubeMaterial
+MRUItem18=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
+MRUItem19=/Game/PuzzleBP/Maps/GameEnvironment
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -1186,7 +1185,7 @@ NiagaraActor.Activation=True
 NiagaraActor.Cooking=True
 NiagaraActor.Replication=True
 NiagaraActor.Actor=True
-FbxImportUI.Mesh=False
+FbxImportUI.Mesh=True
 FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=False
 FbxImportUI.Material=True
@@ -2448,6 +2447,13 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint.IORail2_IOconnectCylinders_001_Blueprint=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Ceiling.WallsPrebuilt_Ceiling;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Floor.WallsPrebuilt_Floor;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall.WallsPrebuilt_Wall;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_Door.WallsPrebuilt_Wall_Door;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_View.WallsPrebuilt_Wall_View;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_ViewCover.WallsPrebuilt_Wall_ViewCover;
+RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_Window.WallsPrebuilt_Wall_Window;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ALAN.ALAN;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp;
@@ -2461,13 +2467,6 @@ RecentlyPlaced=/Game/PuzzleBP/Blueprints/ColourChanger2.ColourChanger2;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ColourChanger0.ColourChanger0;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ConveyorBelt.ConveyorBelt;
 RecentlyPlaced=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001.ConveyorEnd_ConeyorEndScan_001;
-RecentlyPlaced=/Game/Geometry/Meshes/conveyor2.conveyor2;
-RecentlyPlaced=/Game/ParticleFX/sprayTestBP.sprayTestBP;
-RecentlyPlaced=/Game/ParticleFX/spraySystem.spraySystem;
-RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Game/PuzzleBP/Blueprints/CommandInterface/Box_Bp.Box_Bp;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2535,7 +2534,7 @@ Box_Bp_C=
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C=
+OutputDisplay_C="\"Object.End_loc\" "
 ALAN_C=
 ConveyorBelt_C=
 Cube_C=
@@ -2714,7 +2713,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2773,7 +2772,7 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=
+StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2877,7 +2876,7 @@ ColourChanger7_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.P
 BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-BoxSpawner_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BoxSpawner_C=
 BoxChecker_C=
 sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
