--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ParticleFX
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
@@ -181,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/student.HAL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1033,26 +1033,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem3=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem4=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem5=/Game/PuzzleBP/Blueprints/Cube
-MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem9=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem10=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem11=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem12=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem13=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem15=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
-MRUItem16=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem17=/Game/Geometry/Meshes/CubeMaterial
-MRUItem18=/Game/PuzzleBP/Blueprints/PuzzlePlayerCharacter
-MRUItem19=/Game/PuzzleBP/Maps/GameEnvironment
+MRUItem0=/Game/ParticleFX/spraySystem
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem6=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem7=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem8=/Game/PuzzleBP/Blueprints/Cube
+MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem11=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem12=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem13=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem14=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem15=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem17=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
+MRUItem18=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem19=/Game/Geometry/Meshes/CubeMaterial
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2454,6 +2454,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/Beep_Buttons/SFX_Beep_Buttons.SFX_Beep_Buttons=1
 /Game/Audio/Click12345/SFX_ButtonClick.SFX_ButtonClick=1
 /Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint.IORail2_IOconnectCylinders_001_Blueprint=1
+/Game/Audio/Victory_Jingle/victoryjingle_Cue.victoryjingle_Cue=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -2722,7 +2723,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2787,7 +2788,7 @@ PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.Defaul
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ALAN_C=
 BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
