dynamic colour spray

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,6 +161,8 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ParticleFX/spraySystemBP.spraySystemBP
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1033,26 +1035,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ParticleFX/spraySystem
-MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem2=/Game/Audio/Victory_Jingle/victoryjingle_Cue
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem6=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem7=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem8=/Game/PuzzleBP/Blueprints/Cube
-MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem11=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem12=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem13=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem14=/Game/PuzzleBP/Blueprints/ColourChanger1
-MRUItem15=/Game/PuzzleBP/Blueprints/ColourChanger0
-MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem17=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement
-MRUItem18=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem19=/Game/Geometry/Meshes/CubeMaterial
+MRUItem0=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem1=/Game/ParticleFX/spraySystemBP
+MRUItem2=/Game/ParticleFX/spraySystem
+MRUItem3=/Game/ParticleFX/sprayTestBP
+MRUItem4=/Niagara/Modules/Emitter/EmitterState
+MRUItem5=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem6=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem8=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem9=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem10=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem11=/Game/PuzzleBP/Blueprints/Cube
+MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem13=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem14=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem15=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem16=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
+MRUItem17=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem18=/Game/PuzzleBP/Blueprints/ColourChanger0
+MRUItem19=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2301,6 +2303,36 @@ PointLightComponent.DistanceFieldShadows=True
 PointLightComponent.RayTracing=True
 PointLightComponent.Tags=True
 PointLightComponent.Cooking=True
+NiagaraScript.Script=True
+NiagaraDataInterfaceCurve.Errors=True
+NiagaraDataInterfaceCurve.Curve=True
+NiagaraScript.NiagaraScript_InputParams=True
+NiagaraScript.NiagaraScript_OutputParams=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.ComponentTick=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
+spraySystemBP_C.TransformCommon=True
+spraySystemBP_C.Rendering=True
+spraySystemBP_C.Replication=True
+spraySystemBP_C.Collision=True
+spraySystemBP_C.Input=True
+spraySystemBP_C.Actor=True
+spraySystemBP_C.Tick=True
+K2Node_MakeStruct.PinOptions=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2455,8 +2487,11 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/Click12345/SFX_ButtonClick.SFX_ButtonClick=1
 /Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint.IORail2_IOconnectCylinders_001_Blueprint=1
 /Game/Audio/Victory_Jingle/victoryjingle_Cue.victoryjingle_Cue=1
+/Niagara/Modules/Emitter/EmitterState.EmitterState=1
+/Game/ParticleFX/spraySystemBP.spraySystemBP=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/ParticleFX/spraySystemBP.spraySystemBP;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
@@ -2476,7 +2511,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_ViewCover.WallsPrebuilt_
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/ALAN.ALAN;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp;
-RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxMovement/Box_Brush_Movement.Box_Brush_Movement;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2723,7 +2757,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2788,7 +2822,7 @@ PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.Defaul
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=
+ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
@@ -2859,7 +2893,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+SceneComponent=
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
@@ -2890,6 +2924,8 @@ BoxSpawner_C=
 BoxChecker_C=
 sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PrimitiveComponent=
+spraySystemBP_C=
+K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
