Added code to spawner

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,14 +154,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/ParticleFX
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1034,19 +1036,19 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem4=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem5=/Game/ParticleFX/spraySystemBP
-MRUItem6=/Game/ParticleFX/spraySystem
-MRUItem7=/Game/ParticleFX/sprayTestBP
-MRUItem8=/Niagara/Modules/Emitter/EmitterState
-MRUItem9=/Game/Audio/Victory_Jingle/victoryjingle_Cue
-MRUItem10=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem11=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem12=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem1=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/ParticleFX/spraySystemBP
+MRUItem8=/Game/ParticleFX/spraySystem
+MRUItem9=/Game/ParticleFX/sprayTestBP
+MRUItem10=/Niagara/Modules/Emitter/EmitterState
+MRUItem11=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem12=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
 MRUItem13=/Game/PuzzleBP/Blueprints/Cube
 MRUItem14=/Game/PuzzleBP/Blueprints/Box_Bp
 MRUItem15=/Game/Audio/SwitchButtonSounds/switch1to38
@@ -2585,7 +2587,7 @@ Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 IORail2_IOconnectBox_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-BoxSpawner_C=
+BoxSpawner_C="\"Object.SetToSpawn\" "
 BoxChecker_C=
 
 [MaterialEditor]
@@ -2757,7 +2759,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
